--- a/recipes/lemonpie.html
+++ b/recipes/lemonpie.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes - The Odin Project</title>
+    <title>Recipes: The Odin Project</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/lemonpie.html">Lemon Pie</a>
+    <h1>Lemon Pie</h1>
 </body>
 </html>
