--- a/recipes/lemonpie.html
+++ b/recipes/lemonpie.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes: The Odin Project</title>
 </head>
+
 <body>
     <h1>Lemon Pie</h1>
+    <img src="lemonpie.jpeg" alt="A finished lemon pie picture" width="300px">
+    <h3>Description</h3>
+    <p>The world's best lemon pie</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <p>Filling</p>
+        <li>1 cup sugar</li>
+        <li>1/4 cup cornstarch</li>
+        <li>3 tablespoons all-purpose flour</li>
+        <li>1/4 teaspoon salt</li>
+        <li>2 cups water</li>
+        <li>3 large egg yolks, beaten, room temperature</li>
+        <li>1 tablespoon butter</li>
+        <li>1/4 cup lemon juice</li>
+        <li>1 teaspoon grated lemon zest</li>
+        <li>1 pastry shell (9 inches), baked</li>
+        <p>Meringue</p>
+        <li>3 large egg whites, room temperature</li>
+        <li>1/4 teaspoon salt</li>
+        <li>1/2 cup sugar</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>In a medium saucepan, combine sugar, cornstarch, flour and salt. Gradually stir in water. Cook and stir over
+            medium heat until thickened and bubbly. Reduce heat; cook and stir 2 minutes more. Remove from the heat.
+            Gradually stir 1 cup of hot mixture into egg yolks; return all to saucepan. Bring to boil. Cook and stir for
+            2 minutes. Remove from the heat. Stir in the butter, lemon juice and zest until smooth. Pour into pastry
+            shell.</li>
+        <li>In a bowl, beat egg whites and salt until stiff (but not dry) peaks form. Gradually beat in sugar until soft
+            peaks form. Spread over pie, sealing edges to pastry. Bake at 350° until meringue is golden, 12-15 minutes.
+            Cool. Store any leftovers in the refrigerator.</li>
+    </ol>
 </body>
+
 </html>
