--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/lemonpie.html">Lemon Pie</a>
+    <a href="./recipes/casserole.html">Sausage and Egg Cassarole</a>
+    <a href="./recipes/tunasalad.html">Tuna Salad</a>
 </body>
 </html>
