--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lemonpie.html">Lemon Pie</a>
-    <a href="./recipes/casserole.html">Sausage and Egg Cassarole</a>
-    <a href="./recipes/tunasalad.html">Tuna Salad</a>
+    <p>These are some of the recipes I like:</p>
+    <p><a href="./recipes/casserole.html">Sausage and Egg Cassarole</a></p>
+    <p><a href="./recipes/tunasalad.html">Tuna Salad</a></p>
+    <p><a href="./recipes/lemonpie.html">Lemon Pie</a></p>
 </body>
 </html>
