--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="chef.jpg" alt="A Gordom Ramsay picture">
     <p>These are some of the recipes I like:</p>
     <p><a href="./recipes/casserole.html">Sausage and Egg Cassarole</a></p>
     <p><a href="./recipes/tunasalad.html">Tuna Salad</a></p>
