Add a return link into cassarole.html

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -31,6 +31,8 @@
             refrigerator 30 minutes before baking. Bake, uncovered, at 350° for 40 minutes or until a knife inserted in
             center comes out clean.</li>
     </ol>
+    <br>
+    <p><a href="../index.html">Return to the main page</a></p>
 </body>
 
 </html>
