Add a return link into tunasalad.html

--- a/recipes/tunasalad.html
+++ b/recipes/tunasalad.html
@@ -34,6 +34,8 @@
         <li>In a large serving bowl, toss romaine, tomatoes, Swiss cheese, tuna, almonds if desired, and Parmesan cheese.</li>
         <li>Shake dressing; pour over salad and toss. Add bacon and croutons, if desired; serve immediately.</li>
     </ol>
+    <br>
+    <p><a href="../index.html">Return to the main page</a></p>
 </body>
 
 </html>
